--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sun Jul 01 13:33:06 ART 2012
+#Sun Sep 30 21:06:41 GFT 2012
 app.grails.version=2.0.4
 app.name=fotogourmet
 app.servlet.version=2.5
