--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sun Sep 30 21:06:41 GFT 2012
-app.grails.version=2.0.4
+#Mon Oct 08 12:39:41 ART 2012
+app.grails.version=2.1.1
 app.name=fotogourmet
 app.servlet.version=2.5
 app.version=0.1
